# TradingUniverse

./: README.md  leverage_strategy_summary.md  plan.md  pyproject.toml  requirements.txt
artifacts/: gold_silver_omx_prices.csv  ml_threshold.joblib
data/sweden_extended_daily/: ALFA.csv  ASSA-B.csv  ATCO-A.csv  ATCO-B.csv  BOL.csv  ERIC-B.csv  ESSITY-B.csv  HEXA-B.csv  HUSQ-B.csv  INVE-B.csv  NDA-SE.csv  OMX.csv  SAND.csv  SEB-A.csv  SHB-A.csv  SKF-B.csv  SWED-A.csv  TELIA.csv  VOLV-B.csv
data/sweden_top10_daily/: ATCO-A.csv  ATCO-B.csv  ERIC-B.csv  ESSITY-B.csv  HEXA-B.csv  INVE-B.csv  NDA-SE.csv  SAND.csv  SEB-A.csv  VOLV-B.csv  benchmark_equal_weight.csv  meta.json
examples/: cross_asset_gold_silver_omx.py  download_sweden_extended.py  download_sweden_top10.py  plot_leverage_best.py  run_demo.py  run_dip_vs_buyhold.py  run_donchian.py  run_leverage_dip.py  run_leverage_dip_split.py  run_leverage_on_extended.py  sim_gbm_strategy.py  strategy_sweep.py  sweep_leverage_dip.py  sweep_leverage_dip_split.py  train_ml_threshold.py
src/trading_universe/: __init__.py  backtester.py  data.py  features.py  metrics.py  monte_carlo.py  plotting.py  transaction_costs.py
src/trading_universe.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/trading_universe/strategies/: __init__.py  base.py  bull_flag.py  buy_and_hold.py  dip_buy.py  donchian.py  leverage_dip.py  leverage_dip_split.py  ml_threshold.py  sma_cross.py
