[project]
name = "trading-universe"
version = "0.1.0"
description = "Structured backtesting sandbox for experimenting with trading strategies and metrics."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "scipy>=1.10",
    "yfinance>=0.2.37",
    "scikit-learn>=1.3"
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

